--- a/views/user/home.hbs
+++ b/views/user/home.hbs
@@ -211,7 +211,7 @@
                                     <div class="wrap-caption left">
                                         <h2 class="h1 mega-title slideshow__title">Modern Sophistication</h2>
                                         <span class="mega-subtitle slideshow__subtitle">Ecco Sharp comfort and innovation</span>
-                                        <span class="btn">Shop now</span>
+                                        <a href="/shop" class="btn">Shop now</a>
                                     </div>
                                 </div>
                             </div>
@@ -227,7 +227,7 @@
                                     <div class="wrap-caption right">
                                         <h2 class="h1 mega-title slideshow__title">New Season Styles</h2>
                                         <span class="mega-subtitle slideshow__subtitle">Break all boundaries with our new arrival footwears</span>
-                                        <span class="btn">Shop now</span>
+                                        <a href="/shop" class="btn">Shop now</a>
                                     </div>
                                 </div>
                             </div>
@@ -525,11 +525,11 @@
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
                             <h4 class="h4">Quick Shop</h4>
                             <ul>
-                                <li><a href="#">Women</a></li>
-                                <li><a href="#">Men</a></li>
-                                <li><a href="#">Kids</a></li>
-                                <li><a href="#">Sportswear</a></li>
-                                <li><a href="#">Sale</a></li>
+                                <li><a href="/shop">Women</a></li>
+                                <li><a href="/shop">Men</a></li>
+                                <li><a href="/shop">Kids</a></li>
+                                <li><a href="/shop">Sportswear</a></li>
+                                <li><a href="/shop">Sale</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -539,7 +539,7 @@
                                 <li><a href="#">Careers</a></li>
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">Terms &amp; condition</a></li>
-                                <li><a href="#">My Account</a></li>
+                                <li><a href="/userprofile">My Account</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -569,7 +569,7 @@
                 <div class="footer-bottom">
                     <div class="row">
                         <!--Footer Copyright-->
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 copyright text-center"><span></span> <a href="templateshub.net">Templates Hub</a></div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 copyright text-center"><span></span> <a href="/home">Only Shoes</a></div>
                         <!--End Footer Copyright-->
                     </div>
                 </div>
