--- a/views/user/order-success.hbs
+++ b/views/user/order-success.hbs
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
+        
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="description">
@@ -15,6 +16,7 @@
         <!-- Main Style CSS -->
         <link rel="stylesheet" href="assets/order-success-css/style-min.css">
         <link rel="stylesheet" href="assets/order-success-css/responsive.css">
+       
     </head>
 
 {{>header}}
@@ -262,11 +264,11 @@
                     	<div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
                         	<h4 class="h4">Quick Shop</h4>
                             <ul>
-                            	<li><a href="#">Women</a></li>
-                                <li><a href="#">Men</a></li>
-                                <li><a href="#">Kids</a></li>
-                                <li><a href="#">Sportswear</a></li>
-                                <li><a href="#">Sale</a></li>
+                            	<li><a href="/shop">Women</a></li>
+                                <li><a href="/shop">Men</a></li>
+                                <li><a href="/shop">Charecter Edition</a></li>
+                                <li><a href="/shop">Sport</a></li>
+                                <li><a href="/shop">Sneakers</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -276,7 +278,7 @@
                                 <li><a href="#">Careers</a></li>
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">Terms &amp; condition</a></li>
-                                <li><a href="#">My Account</a></li>
+                                <li><a href="/userprofile">My Account</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -284,7 +286,7 @@
                             <ul>
                             	<li><a href="#">Request Personal Data</a></li>
                                 <li><a href="#">FAQ's</a></li>
-                                <li><a href="/contact">Contact Us</a></li>
+                                <li><a href="#">Contact Us</a></li>
                                 <li><a href="#">Orders and Returns</a></li>
                                 <li><a href="#">Support Center</a></li>
                             </ul>
