--- a/views/user/update-password.hbs
+++ b/views/user/update-password.hbs
@@ -69,21 +69,28 @@
                                     <h3>Reset your password here</h3>
                                     <p>Please enter your new password here.</p>
                                     <div class="row">
+    <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="form-group">
             <label for="CustomerPassword">Password <span class="required">*</span></label>
             <input type="password" name="password" placeholder="Enter your password" id="CustomerPassword" autofocus />
+            <input type="checkbox" id="showPassword" onclick="togglePasswordVisibility()">
+            <label for="showPassword">Show Password</label>
         </div>
     </div>
 </div>
- <div class="row">
+<div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="form-group">
             <label for="CustomerPassword">Confirm Password <span class="required">*</span></label>
-            <input type="confirmpassword" name="confirmpassword" placeholder="Enter your password" id="CustomerPassword" autofocus />
+            <input type="password" name="confirmpassword" placeholder="Enter your password" id="confirmpassword" autofocus />
+            <input type="checkbox" id="showConfirmPassword" onclick="toggleConfirmPasswordVisibility()">
+            <label for="showConfirmPassword">Show Password</label>
         </div>
     </div>
 </div>
+</div>
+<span style="color:red">{{errorMessage}}</span>
                                     <div class="row">
                                         <div class="text-left col-12 col-sm-12 col-md-12 col-lg-12">
                                             <input type="submit" class="btn mb-3" value="Submit">
@@ -321,7 +328,25 @@
             <script src="assets/js/plugins.js"></script>
             <!-- Main JS -->
             <script src="assets/js/main.js"></script>
+<script>
+function togglePasswordVisibility() {
+    var passwordInput = document.getElementById("CustomerPassword");
+    if (passwordInput.type === "password") {
+        passwordInput.type = "text";
+    } else {
+        passwordInput.type = "password";
+    }
+}
 
+function toggleConfirmPasswordVisibility() {
+    var confirmPasswordInput = document.getElementById("confirmpassword");
+    if (confirmPasswordInput.type === "password") {
+        confirmPasswordInput.type = "text";
+    } else {
+        confirmPasswordInput.type = "password";
+    }
+}
+</script>
         </div>
     </body>
 </html>
