--- a/views/admin/add-coupon.hbs
+++ b/views/admin/add-coupon.hbs
@@ -25,7 +25,8 @@
   <!-- Custom Style-->
   <link href="adminAssets/css/app-style.css" rel="stylesheet"/>
   
-  
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <body class="bg-theme bg-theme1">
@@ -58,7 +59,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+    <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -77,6 +82,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
+     <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
 
       <li>
         <a href="/admin-profile">
@@ -125,15 +136,15 @@
   </ul>
      
   <ul class="navbar-nav align-items-center right-nav-link">
-    <li class="nav-item dropdown-lg">
+    {{!-- <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-envelope-open-o"></i></a>
     </li>
     <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-bell-o"></i></a>
-    </li>
-    <li class="nav-item language">
+    </li> --}}
+    {{!-- <li class="nav-item language">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();"><i class="fa fa-flag"></i></a>
       <ul class="dropdown-menu dropdown-menu-right">
           <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
@@ -141,31 +152,31 @@
           <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
           <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
         </ul>
-    </li>
+    </li> --}}
     <li class="nav-item">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
-        <span class="user-profile"><img src="https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
+        <span class="user-profile"><img src="asset\images\profile-circle.1023x1024.png" class="img-circle" alt="user avatar"></span>
       </a>
       <ul class="dropdown-menu dropdown-menu-right">
        <li class="dropdown-item user-details">
         <a href="javaScript:void();">
-           <div class="media">
-             <div class="avatar"><img class="align-self-start mr-3" src="https://via.placeholder.com/110x110" alt="user avatar"></div>
+           {{!-- <div class="media">
+             <div class="avatar"><img class="align-self-start mr-3" src="asset\images\profile-circle.1023x1024.png" alt="user avatar"></div>
             <div class="media-body">
             <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
             <p class="user-subtitle">mccoy@example.com</p>
             </div>
-           </div>
+           </div> --}}
           </a>
         </li>
-        <li class="dropdown-divider"></li>
+        {{!-- <li class="dropdown-divider"></li>
         <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
+        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li> --}}
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
+        <li class="dropdown-item"><a href="/admin-profile"><i class="icon-settings mr-2"></i> Setting</a></li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
+        <li class="dropdown-item"><a href="/admin-logout"><i class="icon-power mr-2"></i> Logout</a></li>
       </ul>
     </li>
   </ul>
@@ -183,36 +194,35 @@
                 <div class="card-body">
                     <div class="card-title">Add Coupon</div>
                     <hr>
-                    <form action="/add-coupon" method="post">
-                        <div class="form-group">
-                            <label for="input-1">Code</label>
-                            <input type="text" class="form-control" name="code" id="code" placeholder="Enter Coupon code">
-                        </div>
-                        <div class="form-group">
-                            <label for="input-2">Discount</label>
-                            <input type="text" class="form-control" name="discount" id="discount" placeholder="Enter Discount">
-                        </div>
-                        <div class="form-group">
-                            <label for="input-3">Min Price Range</label>
-                            <input type="text" class="form-control" name="minPriceRange" id="minPriceRange" placeholder="Enter Min Price">
-                        </div>
-                        <div class="form-group">
-                            <label for="input-4">Max Price Range</label>
-                            <input type="text" class="form-control" name="maxPriceRange" id="maxPriceRange" placeholder="Enter Max Price">
-                        </div>
-                        <div class="form-group">
-                          <label for="input-3">Usage Count</label>
-                          <input type="text" class="form-control" name="usageCount" id="usagecount" placeholder="Enter usage count">
-                      </div>
-                    <div class="form-group">
-                      <label for="input-7">Select Date</label>
-                      <input type="date" class="form-control" name="expireDate" id="expireDate">
-                  </div>
-                       
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-light px-5"> Add Coupon</button>
-                        </div>
-                    </form>
+                   <form action="/add-coupon" method="post" onsubmit="return validateForm()">
+    <div class="form-group">
+        <label for="input-1">Code</label>
+        <input type="text" class="form-control" name="code" id="code" placeholder="Enter Coupon code">
+    </div>
+    <div class="form-group">
+        <label for="input-2">Discount</label>
+        <input type="text" class="form-control" name="discount" id="discount" placeholder="Enter Discount">
+    </div>
+    <div class="form-group">
+        <label for="input-3">Min Price Range</label>
+        <input type="text" class="form-control" name="minPriceRange" id="minPriceRange" placeholder="Enter Min Price">
+    </div>
+    <div class="form-group">
+        <label for="input-4">Max Price Range</label>
+        <input type="text" class="form-control" name="maxPriceRange" id="maxPriceRange" placeholder="Enter Max Price">
+    </div>
+    <div class="form-group">
+        <label for="input-3">Usage Count</label>
+        <input type="text" class="form-control" name="usageCount" id="usagecount" placeholder="Enter usage count">
+    </div>
+    <div class="form-group">
+        <label for="input-7">Select Date</label>
+        <input type="date" class="form-control" name="expireDate" id="expireDate">
+    </div>
+    <div class="form-group">
+        <button type="submit" class="btn btn-light px-5">Add Coupon</button>
+    </div>
+</form>
                 </div>
             </div>
         </div>
@@ -293,6 +303,25 @@
   
   <!-- Custom scripts -->
   <script src="adminAssets/js/app-script.js"></script>
-	
+	<script>
+function validateForm() {
+    var code = document.getElementById("code").value;
+    var discount = document.getElementById("discount").value;
+    var minPriceRange = document.getElementById("minPriceRange").value;
+    var maxPriceRange = document.getElementById("maxPriceRange").value;
+    var usageCount = document.getElementById("usagecount").value;
+    var expireDate = document.getElementById("expireDate").value;
+
+    if (!code.trim() || !discount.trim()|| !minPriceRange.trim() || !maxPriceRange.trim() || !usageCount.trim() || !expireDate.trim()) {
+        Swal.fire({
+            icon: 'warning',
+            title: 'Oops...',
+            text: 'All fields must be filled out',
+        });
+        return false;
+    }
+    return true;
+}
+</script>
 </body>
 </html>
