--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -73,7 +73,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+    <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -92,7 +96,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
-
+       <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
       <li>
         <a href="/admin-profile">
           <i class="zmdi zmdi-face"></i> <span>Profile</span>
@@ -124,73 +133,68 @@
 
         <!--Start topbar header-->
         <header class="topbar-nav">
-            <nav class="navbar navbar-expand fixed-top">
-                <ul class="navbar-nav mr-auto align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link toggle-menu" href="javascript:void();">
-                            <i class="icon-menu menu-icon"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <form class="search-bar">
-                            <input type="text" class="form-control" placeholder="Enter keywords">
-                            <a href="javascript:void();"><i class="icon-magnifier"></i></a>
-                        </form>
-                    </li>
-                </ul>
-
-                <ul class="navbar-nav align-items-center right-nav-link">
-                    <li class="nav-item dropdown-lg">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-                            href="javascript:void();">
-                            <i class="fa fa-envelope-open-o"></i></a>
-                    </li>
-                    <li class="nav-item dropdown-lg">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-                            href="javascript:void();">
-                            <i class="fa fa-bell-o"></i></a>
-                    </li>
-                    <li class="nav-item language">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-                            href="javascript:void();"><i class="fa fa-flag"></i></a>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
-                            <li class="dropdown-item"> <i class="flag-icon flag-icon-fr mr-2"></i> French</li>
-                            <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
-                            <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
-                            <span class="user-profile"><img src="https://via.placeholder.com/110x110" class="img-circle"
-                                    alt="user avatar"></span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li class="dropdown-item user-details">
-                                <a href="javaScript:void();">
-                                    <div class="media">
-                                        <div class="avatar"><img class="align-self-start mr-3"
-                                                src="https://via.placeholder.com/110x110" alt="user avatar"></div>
-                                        <div class="media-body">
-                                            <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
-                                            <p class="user-subtitle">mccoy@example.com</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="dropdown-divider"></li>
-                            <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
-                            <li class="dropdown-divider"></li>
-                            <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
-                            <li class="dropdown-divider"></li>
-                            <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
-                            <li class="dropdown-divider"></li>
-                            <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+ <nav class="navbar navbar-expand fixed-top">
+  <ul class="navbar-nav mr-auto align-items-center">
+    <li class="nav-item">
+      <a class="nav-link toggle-menu" href="javascript:void();">
+       <i class="icon-menu menu-icon"></i>
+     </a>
+    </li>
+    <li class="nav-item">
+      <form class="search-bar">
+        <input type="text" class="form-control" placeholder="Enter keywords">
+         <a href="javascript:void();"><i class="icon-magnifier"></i></a>
+      </form>
+    </li>
+  </ul>
+     
+  <ul class="navbar-nav align-items-center right-nav-link">
+    {{!-- <li class="nav-item dropdown-lg">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
+      <i class="fa fa-envelope-open-o"></i></a>
+    </li>
+    <li class="nav-item dropdown-lg">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
+      <i class="fa fa-bell-o"></i></a>
+    </li> --}}
+    {{!-- <li class="nav-item language">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();"><i class="fa fa-flag"></i></a>
+      <ul class="dropdown-menu dropdown-menu-right">
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-fr mr-2"></i> French</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
+        </ul>
+    </li> --}}
+    <li class="nav-item">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
+        <span class="user-profile"><img src="asset\images\profile-circle.1023x1024.png" class="img-circle" alt="user avatar"></span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-right">
+       <li class="dropdown-item user-details">
+        <a href="javaScript:void();">
+           {{!-- <div class="media">
+             <div class="avatar"><img class="align-self-start mr-3" src="asset\images\profile-circle.1023x1024.png" alt="user avatar"></div>
+            <div class="media-body">
+            <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
+            <p class="user-subtitle">mccoy@example.com</p>
+            </div>
+           </div> --}}
+          </a>
+        </li>
+        {{!-- <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li> --}}
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><a href="/admin-profile"><i class="icon-settings mr-2"></i> Setting</a></li>
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><a href="/admin-logout"><i class="icon-power mr-2"></i> Logout</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+</header>
         <!--End topbar header-->
         <div class="clearfix"></div>
 
@@ -202,9 +206,22 @@
                       <div class="card-body">
                         <h5 class="card-title">Products</h5>
                         <div class="form-group">
-                            <a href="/add-product" class="btn btn-light px-5"> Add Product</a>
-                            <button type="submit" id="deleteSelected" class="btn btn-light px-5"> Delete Selected</button>
-                        </div>
+    <!-- Add Product and Delete Selected buttons -->
+    <a href="/add-product" class="btn btn-light px-5"> Add Product</a>
+    <button type="submit" id="deleteSelected" class="btn btn-light px-5"> Delete Selected</button>
+</div>
+
+<!-- Filter Section -->
+{{!-- <div class="form-group">
+    <label for="filterAmountMin">Min Amount</label>
+    <input type="number" id="filterAmountMin" name="filterAmountMin" class="form-control" placeholder="Enter minimum amount">
+
+    <label for="filterAmountMax">Max Amount</label>
+    <input type="number" id="filterAmountMax" name="filterAmountMax" class="form-control" placeholder="Enter maximum amount">
+<br>
+    <button type="button" id="filterButton" class="btn btn-light px-5">Filter</button>
+</div> --}}
+
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
@@ -340,7 +357,19 @@
     const selectedIds = Array.from(selectedCheckboxes).map(checkbox => checkbox.getAttribute('data-id'));
 
     if (selectedIds.length === 0) {
-      alert('No coupons selected');
+      Swal.fire({
+        icon: 'warning',
+        title: 'No products selected',
+        text: 'Please select at least one product to proceed.',
+        showConfirmButton: false,
+        timer: 2000,
+        timerProgressBar: true,
+        background: '#f9f9f9',
+        iconColor: '#dc3545',
+        customClass: {
+          popup: 'swal2-custom-popup'
+        }
+      });      
       return;
     }
 
@@ -355,14 +384,27 @@
 
       const result = await response.json();
       if (response.ok) {
-        alert(result.message);
-        window.location.reload();
+         Swal.fire({
+    icon: 'success',
+    title: 'Success',
+    text: result.message,
+  }).then(() => {
+    window.location.reload();
+  });
       } else {
-        alert('Error: ' + result);
+Swal.fire({
+    icon: 'error',
+    title: 'Error',
+    text: 'Error: ' + result,
+  });        
       }
     } catch (error) {
       console.error('Error:', error);
-      alert('An error occurred while deleting coupons');
+ Swal.fire({
+    icon: 'error',
+    title: 'An error occurred',
+    text: 'An error occurred while deleting coupons',
+  });      
     }
   });
 </script>
@@ -391,6 +433,25 @@
         });
       });
     </script>
+
+<script>
+    document.getElementById('filterButton').addEventListener('click', function() {
+        const minAmount = parseFloat(document.getElementById('filterAmountMin').value);
+        const maxAmount = parseFloat(document.getElementById('filterAmountMax').value);
+  console.log('minAmount:', minAmount, 'maxAmount:', maxAmount);
+        // Assuming you have a table or list of products with class 'product-item' and data attributes for amount
+        const products = document.querySelectorAll('.product-item');
+
+        products.forEach(product => {
+            const amount = parseFloat(product.getAttribute('data-amount'));
+            if ((isNaN(minAmount) || amount >= minAmount) && (isNaN(maxAmount) || amount <= maxAmount)) {
+                product.style.display = '';
+            } else {
+                product.style.display = 'none';
+            }
+        });
+    });
+</script>
 
 </body>
 
