--- a/views/admin/admin-users.hbs
+++ b/views/admin/admin-users.hbs
@@ -72,7 +72,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+      <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -91,7 +95,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
-
+       <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
       <li>
         <a href="/admin-profile">
           <i class="zmdi zmdi-face"></i> <span>Profile</span>
@@ -131,11 +140,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <form class="search-bar">
-                            <input type="text" class="form-control" placeholder="Enter keywords">
-                            <a href="javascript:void();"><i class="icon-magnifier"></i></a>
-                        </form>
-                    </li>
+    <form class="search-bar" action="/admin-users" method="get">
+        <input type="text" name="search" class="form-control" placeholder="Enter keywords" value="{{searchTerm}}">
+        <a href="javascript:void(0);" class="search-button"><i class="icon-magnifier"></i></a>
+    </form>
+</li>
                 </ul>
 
                 <ul class="navbar-nav align-items-center right-nav-link">
@@ -167,14 +176,14 @@
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li class="dropdown-item user-details">
                                 <a href="javaScript:void();">
-                                    <div class="media">
+                                    {{!-- <div class="media">
                                         <div class="avatar"><img class="align-self-start mr-3"
                                                 src="https://via.placeholder.com/110x110" alt="user avatar"></div>
                                         <div class="media-body">
                                             <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
                                             <p class="user-subtitle">mccoy@example.com</p>
                                         </div>
-                                    </div>
+                                    </div> --}}
                                 </a>
                             </li>
                             <li class="dropdown-divider"></li>
@@ -200,7 +209,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title">Users</h5>
-                        <button id="deleteSelected" class="btn btn-danger mb-3">Delete Selected</button>
+                        <button id="deleteSelected" class="btn btn-light px-5">Delete Selected</button>
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
@@ -333,7 +342,17 @@
     <script src="adminAssets/js/app-script.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const searchButton = document.querySelector('.search-button');
+    const searchForm = document.querySelector('.search-bar');
 
+    searchButton.addEventListener('click', () => {
+        searchForm.submit();
+    });
+});
+
+</script>
     <script>
 function confirmDeleteUser(userId) {
   const userConfirmed = confirm('Do you want to delete the user?');
