--- a/views/admin/edit-banner.hbs
+++ b/views/admin/edit-banner.hbs
@@ -25,7 +25,8 @@
   <!-- Custom Style-->
   <link href="adminAssets/css/app-style.css" rel="stylesheet"/>
   
-  
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <body class="bg-theme bg-theme1">
@@ -58,7 +59,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+      <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -77,7 +82,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
-
+       <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
       <li>
         <a href="/admin-profile">
           <i class="zmdi zmdi-face"></i> <span>Profile</span>
@@ -125,15 +135,15 @@
   </ul>
      
   <ul class="navbar-nav align-items-center right-nav-link">
-    <li class="nav-item dropdown-lg">
+    {{!-- <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-envelope-open-o"></i></a>
     </li>
     <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-bell-o"></i></a>
-    </li>
-    <li class="nav-item language">
+    </li> --}}
+    {{!-- <li class="nav-item language">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();"><i class="fa fa-flag"></i></a>
       <ul class="dropdown-menu dropdown-menu-right">
           <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
@@ -141,31 +151,31 @@
           <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
           <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
         </ul>
-    </li>
+    </li> --}}
     <li class="nav-item">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
-        <span class="user-profile"><img src="https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
+        <span class="user-profile"><img src="asset\images\profile-circle.1023x1024.png" class="img-circle" alt="user avatar"></span>
       </a>
       <ul class="dropdown-menu dropdown-menu-right">
        <li class="dropdown-item user-details">
         <a href="javaScript:void();">
-           <div class="media">
-             <div class="avatar"><img class="align-self-start mr-3" src="https://via.placeholder.com/110x110" alt="user avatar"></div>
+           {{!-- <div class="media">
+             <div class="avatar"><img class="align-self-start mr-3" src="asset\images\profile-circle.1023x1024.png" alt="user avatar"></div>
             <div class="media-body">
             <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
             <p class="user-subtitle">mccoy@example.com</p>
             </div>
-           </div>
+           </div> --}}
           </a>
         </li>
-        <li class="dropdown-divider"></li>
+        {{!-- <li class="dropdown-divider"></li>
         <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
+        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li> --}}
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
+        <li class="dropdown-item"><a href="/admin-profile"><i class="icon-settings mr-2"></i> Setting</a></li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
+        <li class="dropdown-item"><a href="/admin-logout"><i class="icon-power mr-2"></i> Logout</a></li>
       </ul>
     </li>
   </ul>
@@ -183,22 +193,22 @@
                 <div class="card-body">
                     <div class="card-title">Edit Banner</div>
                     <hr>
-                    <form action="/update-banner" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="bannerId" value="{{banner._id}}">
-                        <div class="form-group">
-                            <label for="input-1">Title</label>
-                            <input type="text" name="title" id="title" class="form-control" value="{{banner.title}}" id="input-1" placeholder="Enter Banner Title">
-                        </div>
-                        <div class="form-group">
-                            <label for="input-6">Banner Image</label>
-                            <div class="input-group">
-                                <div class="custom-file">
-                                    <input type="file" name="bannerImage" id="bannerImage" class="custom-file-input" id="input-6" aria-describedby="input-6-addon" multiple>
-                                    <label class="custom-file-label" for="input-6">Choose file</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="product-images-section mt-4">
+                   <form action="/update-banner" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
+    <input type="hidden" name="bannerId" value="{{banner._id}}">
+    <div class="form-group">
+        <label for="input-1">Title</label>
+        <input type="text" name="title" id="title" class="form-control" value="{{banner.title}}" id="input-1" placeholder="Enter Banner Title">
+    </div>
+    <div class="form-group">
+        <label for="input-6">Banner Image</label>
+        <div class="input-group">
+            <div class="custom-file">
+                <input type="file" name="bannerImage" id="bannerImage" class="custom-file-input" id="input-6" aria-describedby="input-6-addon" multiple>
+                <label class="custom-file-label" for="input-6">Choose file</label>
+            </div>
+        </div>
+    </div>
+    <div class="product-images-section mt-4">
         <h5>Current Banner Images</h5>
         <div class="row">
             {{#each banner.image}}
@@ -210,10 +220,11 @@
             {{/each}}
         </div>
     </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-light px-5"> Update Banner</button>
-                        </div>
-                    </form>
+    <p class="text-danger">{{error}}</p>
+    <div class="form-group">
+        <button type="submit" class="btn btn-light px-5">Update Banner</button>
+    </div>
+</form>
                 </div>
             </div>
         </div>
@@ -295,5 +306,21 @@
   <!-- Custom scripts -->
   <script src="adminAssets/js/app-script.js"></script>
 	
+  <script>
+    function validateForm() {
+        var title = document.getElementById('title').value;
+        var bannerImage = document.getElementById('bannerImage').value;
+
+        if (!title.trim()) {
+ Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: 'Please fill out all required fields.'
+            });            
+            return false;
+        }
+        return true;
+    }
+</script>
 </body>
 </html>
