--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -25,6 +25,8 @@
   <!-- Custom Style-->
   <link href="adminAssets/css/app-style.css" rel="stylesheet"/>
   
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
   <style>
     .product-images-section {
         margin-top: 2rem;
@@ -67,7 +69,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+      <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -86,7 +92,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
-
+       <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
       <li>
         <a href="/admin-profile">
           <i class="zmdi zmdi-face"></i> <span>Profile</span>
@@ -134,15 +145,15 @@
   </ul>
      
   <ul class="navbar-nav align-items-center right-nav-link">
-    <li class="nav-item dropdown-lg">
+    {{!-- <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-envelope-open-o"></i></a>
     </li>
     <li class="nav-item dropdown-lg">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
       <i class="fa fa-bell-o"></i></a>
-    </li>
-    <li class="nav-item language">
+    </li> --}}
+    {{!-- <li class="nav-item language">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();"><i class="fa fa-flag"></i></a>
       <ul class="dropdown-menu dropdown-menu-right">
           <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
@@ -150,31 +161,31 @@
           <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
           <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
         </ul>
-    </li>
+    </li> --}}
     <li class="nav-item">
       <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
-        <span class="user-profile"><img src="https://via.placeholder.com/110x110" class="img-circle" alt="user avatar"></span>
+        <span class="user-profile"><img src="asset\images\profile-circle.1023x1024.png" class="img-circle" alt="user avatar"></span>
       </a>
       <ul class="dropdown-menu dropdown-menu-right">
        <li class="dropdown-item user-details">
         <a href="javaScript:void();">
-           <div class="media">
-             <div class="avatar"><img class="align-self-start mr-3" src="https://via.placeholder.com/110x110" alt="user avatar"></div>
+           {{!-- <div class="media">
+             <div class="avatar"><img class="align-self-start mr-3" src="asset\images\profile-circle.1023x1024.png" alt="user avatar"></div>
             <div class="media-body">
             <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
             <p class="user-subtitle">mccoy@example.com</p>
             </div>
-           </div>
+           </div> --}}
           </a>
         </li>
-        <li class="dropdown-divider"></li>
+        {{!-- <li class="dropdown-divider"></li>
         <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
+        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li> --}}
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
+        <li class="dropdown-item"><a href="/admin-profile"><i class="icon-settings mr-2"></i> Setting</a></li>
         <li class="dropdown-divider"></li>
-        <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
+        <li class="dropdown-item"><a href="/admin-logout"><i class="icon-power mr-2"></i> Logout</a></li>
       </ul>
     </li>
   </ul>
@@ -192,7 +203,7 @@
                 <div class="card-body">
                     <div class="card-title">Edit Product</div>
                     <hr>
-   <form action="/update-product" method="post" enctype="multipart/form-data">
+   <form action="/update-product" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
     <input type="hidden" name="productId" value="{{product._id}}">
     <div class="form-group">
         <label for="input-1">Product Name</label>
@@ -333,6 +344,20 @@
   
   <!-- Custom scripts -->
   <script src="adminAssets/js/app-script.js"></script>
-	
+	<script>
+function validateForm() {
+    var name = document.getElementById('name').value;
+    var brand = document.getElementById('brand').value;
+    var price = document.getElementById('price').value;
+    var description = document.getElementById('description').value;
+    var stock = document.getElementById('stock').value;
+
+    if (!name || !brand || !price || !description || !stock) {
+        alert("Please fill out all fields before submitting.");
+        return false;
+    }
+    return true;
+}
+</script>
 </body>
 </html>
