--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -28,6 +28,7 @@
   <!-- Custom Style-->
   <link href="adminAssets/css/app-style.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
   <style>
     .list-inline-item i {
@@ -107,7 +108,11 @@
           <i class="zmdi zmdi-accounts"></i> <span>Users</span>
         </a>
       </li>
-
+      <li>
+        <a href="/admin-orders">
+          <i class="zmdi zmdi-accounts"></i> <span>Orders</span>
+        </a>
+      </li>
       <li>
         <a href="/admin-products">
           <i class="zmdi zmdi-shopping-cart"></i> <span>Products</span>
@@ -126,7 +131,12 @@
           {{!-- <small class="badge float-right badge-light">New</small> --}}
         </a>
       </li>
-
+       <li>
+  <a href="/admin-return">
+    <i class="fas fa-undo"></i> <span>Returns</span>
+    {{!-- <small class="badge float-right badge-light">New</small> --}}
+  </a>
+</li>
       <li>
         <a href="/admin-profile">
           <i class="zmdi zmdi-face"></i> <span>Profile</span>
@@ -157,73 +167,68 @@
 
     <!--Start topbar header-->
     <header class="topbar-nav">
-      <nav class="navbar navbar-expand fixed-top">
-        <ul class="navbar-nav mr-auto align-items-center">
-          <li class="nav-item">
-            <a class="nav-link toggle-menu" href="javascript:void();">
-              <i class="icon-menu menu-icon"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <form class="search-bar">
-              <input type="text" class="form-control" placeholder="Enter keywords">
-              <a href="javascript:void();"><i class="icon-magnifier"></i></a>
-            </form>
-          </li>
+ <nav class="navbar navbar-expand fixed-top">
+  <ul class="navbar-nav mr-auto align-items-center">
+    <li class="nav-item">
+      <a class="nav-link toggle-menu" href="javascript:void();">
+       <i class="icon-menu menu-icon"></i>
+     </a>
+    </li>
+    <li class="nav-item">
+      <form class="search-bar">
+        <input type="text" class="form-control" placeholder="Enter keywords">
+         <a href="javascript:void();"><i class="icon-magnifier"></i></a>
+      </form>
+    </li>
+  </ul>
+     
+  <ul class="navbar-nav align-items-center right-nav-link">
+    {{!-- <li class="nav-item dropdown-lg">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
+      <i class="fa fa-envelope-open-o"></i></a>
+    </li>
+    <li class="nav-item dropdown-lg">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();">
+      <i class="fa fa-bell-o"></i></a>
+    </li> --}}
+    {{!-- <li class="nav-item language">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown" href="javascript:void();"><i class="fa fa-flag"></i></a>
+      <ul class="dropdown-menu dropdown-menu-right">
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-fr mr-2"></i> French</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
+          <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
         </ul>
-
-        <ul class="navbar-nav align-items-center right-nav-link">
-          <li class="nav-item dropdown-lg">
-            <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-              href="javascript:void();">
-              <i class="fa fa-envelope-open-o"></i></a>
-          </li>
-          <li class="nav-item dropdown-lg">
-            <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-              href="javascript:void();">
-              <i class="fa fa-bell-o"></i></a>
-          </li>
-          <li class="nav-item language">
-            <a class="nav-link dropdown-toggle dropdown-toggle-nocaret waves-effect" data-toggle="dropdown"
-              href="javascript:void();"><i class="fa fa-flag"></i></a>
-            <ul class="dropdown-menu dropdown-menu-right">
-              <li class="dropdown-item"> <i class="flag-icon flag-icon-gb mr-2"></i> English</li>
-              <li class="dropdown-item"> <i class="flag-icon flag-icon-fr mr-2"></i> French</li>
-              <li class="dropdown-item"> <i class="flag-icon flag-icon-cn mr-2"></i> Chinese</li>
-              <li class="dropdown-item"> <i class="flag-icon flag-icon-de mr-2"></i> German</li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
-              <span class="user-profile"><img src="https://via.placeholder.com/110x110" class="img-circle"
-                  alt="user avatar"></span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-right">
-              <li class="dropdown-item user-details">
-                <a href="javaScript:void();">
-                  <div class="media">
-                    <div class="avatar"><img class="align-self-start mr-3" src="https://via.placeholder.com/110x110"
-                        alt="user avatar"></div>
-                    <div class="media-body">
-                      <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
-                      <p class="user-subtitle">mccoy@example.com</p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><i class="icon-settings mr-2"></i> Setting</li>
-              <li class="dropdown-divider"></li>
-              <li class="dropdown-item"><i class="icon-power mr-2"></i> Logout</li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    </li> --}}
+    <li class="nav-item">
+      <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
+        <span class="user-profile"><img src="asset\images\profile-circle.1023x1024.png" class="img-circle" alt="user avatar"></span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-right">
+       <li class="dropdown-item user-details">
+        <a href="javaScript:void();">
+           {{!-- <div class="media">
+             <div class="avatar"><img class="align-self-start mr-3" src="asset\images\profile-circle.1023x1024.png" alt="user avatar"></div>
+            <div class="media-body">
+            <h6 class="mt-2 user-title">Sarajhon Mccoy</h6>
+            <p class="user-subtitle">mccoy@example.com</p>
+            </div>
+           </div> --}}
+          </a>
+        </li>
+        {{!-- <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><i class="icon-envelope mr-2"></i> Inbox</li>
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><i class="icon-wallet mr-2"></i> Account</li> --}}
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><a href="/admin-profile"><i class="icon-settings mr-2"></i> Setting</a></li>
+        <li class="dropdown-divider"></li>
+        <li class="dropdown-item"><a href="/admin-logout"><i class="icon-power mr-2"></i> Logout</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+</header>
     <!--End topbar header-->
 
     <div class="clearfix"></div>
@@ -281,194 +286,107 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-12 col-lg-8 col-xl-8">
-            <div class="card">
-              <div class="card-header">Site Traffic
-                <div class="card-action">
-                  <div class="dropdown">
-                    <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
-                      <i class="icon-options"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" href="javascript:void();">Action</a>
-                      <a class="dropdown-item" href="javascript:void();">Another action</a>
-                      <a class="dropdown-item" href="javascript:void();">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="javascript:void();">Separated link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card-body">
-
-                <div class="chart-container-1">
-                  {{!-- <canvas id="chart1"></canvas> --}}
-                      <canvas id="chart1" width="400" height="200"></canvas>
-
-                </div>
-              </div>
-
-              <div class="row m-0 row-group text-center border-top border-light-3">
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">45.87M</h5>
-                    <small class="mb-0">Overall Visitor <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
-                  </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">15:48</h5>
-                    <small class="mb-0">Visitor Duration <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
-                  </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">245.65</h5>
-                    <small class="mb-0">Pages/Visit <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
-                  </div>
-                </div>
-              </div>
-
+       <div class="row">
+  <div class="col-12 col-lg-8 col-xl-8">
+    <div class="card">
+      <div class="card-header">Site Traffic
+        <div class="card-action">
+          <div class="dropdown">
+            <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
+              <i class="icon-options"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="javascript:void();">Action</a>
+              <a class="dropdown-item" href="javascript:void();">Another action</a>
+              <a class="dropdown-item" href="javascript:void();">Something else here</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="javascript:void();">Separated link</a>
             </div>
           </div>
-
-          <div class="col-12 col-lg-4 col-xl-4">
-            <div class="card">
-              <div class="card-header">Weekly sales
-                <div class="card-action">
-                  <div class="dropdown">
-                    <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
-                      <i class="icon-options"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" href="javascript:void();">Action</a>
-                      <a class="dropdown-item" href="javascript:void();">Another action</a>
-                      <a class="dropdown-item" href="javascript:void();">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="javascript:void();">Separated link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="chart-container-2">
-                  <canvas id="chart2"></canvas>
-                </div>
-              </div>
-              <div class="table-responsive">
-                <table class="table align-items-center">
-                  <tbody>
-                    <tr>
-                      <td><i class="fa fa-circle text-white mr-2"></i> Direct</td>
-                      <td>$5856</td>
-                      <td>+55%</td>
-                    </tr>
-                    <tr>
-                      <td><i class="fa fa-circle text-light-1 mr-2"></i>Affiliate</td>
-                      <td>$2602</td>
-                      <td>+25%</td>
-                    </tr>
-                    <tr>
-                      <td><i class="fa fa-circle text-light-2 mr-2"></i>E-mail</td>
-                      <td>$1802</td>
-                      <td>+15%</td>
-                    </tr>
-                    <tr>
-                      <td><i class="fa fa-circle text-light-3 mr-2"></i>Other</td>
-                      <td>$1105</td>
-                      <td>+5%</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="chart-container-1">
+          <canvas id="chart1" width="400" height="200"></canvas>
+        </div>
+      </div>
+      <div class="row m-0 row-group text-center border-top border-light-3">
+        <div class="col-12 col-lg-4">
+          <div class="p-3">
+            <h5 class="mb-0">45.87M</h5>
+            <small class="mb-0">Overall Visitor <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
           </div>
-        </div><!--End Row-->
-
-        <div class="row">
-          <div class="col-12 col-lg-12">
-            <div class="card">
-              <div class="card-header">Recent Order Tables
-                <div class="card-action">
-                  <div class="dropdown">
-                    <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
-                      <i class="icon-options"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" href="javascript:void();">Action</a>
-                      <a class="dropdown-item" href="javascript:void();">Another action</a>
-                      <a class="dropdown-item" href="javascript:void();">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="javascript:void();">Separated link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="table-responsive">
-                <table class="table align-items-center table-flush table-borderless">
-                  <thead>
-
-                    <tr>
-                      <th>Order ID</th>
-                      <th>Address</th>
-                      <th>Payment</th>
-                      <th>Items</th>
-                      <th>Amount</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                   {{#each orders}}
-<tr>
-  <td>{{this.orderID}}</td>
-  <td>
-    {{this.address.firstName}} {{this.address.lastName}},
-    {{this.address.street}},
-    {{this.address.city}},
-    {{this.address.state}},
-    {{this.address.postCode}}
-  </td>
-  <td>{{this.payment}}</td>
-  <td>
-  <ul>
-  {{#each this.items}}
-    <li>{{this.product.name}} - Quantity: {{this.quantity}}</li>
-  {{/each}}
-</ul>
-<td>{{this.deliveryExpectedDate}}</td>
-{{!-- <td>
-  <select class="form-control order-status" data-order-id="{{this._id}}">
-    <option value="pending" {{#if (eq this.status 'pending')}}selected{{/if}}>Pending</option>
-    <option value="processing" {{#if (eq this.status 'processing')}}selected{{/if}}>Processing</option>
-    <option value="shipped" {{#if (eq this.status 'shipped')}}selected{{/if}}>Shipped</option>
-    <option value="delivered" {{#if (eq this.status 'delivered')}}selected{{/if}}>Delivered</option>
-    <option value="canceled" {{#if (eq this.status 'canceled')}}selected{{/if}}>Canceled</option>
-  </select>
-</td> --}}
- <td>
-      <select class="form-control order-status" data-order-id="{{this._id}}" data-orderStatus="{{this.orderStatus}}">
-        <option value="pending" {{#if (eq this.orderStatus 'pending')}}selected{{/if}}>Pending</option>
-        <option value="processing" {{#if (eq this.orderStatus 'processing')}}selected{{/if}}>Processing</option>
-        <option value="shipped" {{#if (eq this.orderStatus 'shipped')}}selected{{/if}}>Shipped</option>
-        <option value="delivered" {{#if (eq this.orderStatus 'delivered')}}selected{{/if}}>Delivered</option>
-        <option value="canceled" {{#if (eq this.orderStatus 'canceled')}}selected{{/if}}>Canceled</option>
-      </select>
-    </td>
-
-
-</tr>
-{{/each}}
-
-
-
-                  </tbody>
-                </table>
-              </div>
-            </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="p-3">
+            <h5 class="mb-0">15:48</h5>
+            <small class="mb-0">Visitor Duration <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
           </div>
-        </div><!--End Row-->
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="p-3">
+            <h5 class="mb-0">245.65</h5>
+            <small class="mb-0">Pages/Visit <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Combined Most Buyed Category and Most Buyed User Tables -->
+  <div class="col-12 col-lg-4 col-xl-4">
+    <div class="card">
+      <div class="card-header">Most Buyed Category
+        <div class="card-action">
+          <div class="dropdown">
+            <!-- Dropdown content -->
+          </div>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table align-items-center">
+          <tbody>
+      {{#each topCategory}}
+            <tr>
+              <td><i class="fa fa-circle text-white mr-2"></i> {{this._id}}</td>
+              <td>{{this.totalBought}}</td>
+              {{!-- <td>+55%</td> --}}
+            </tr>
+           
+      {{/each}}
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">Most Buyed Product
+        <div class="card-action">
+          <div class="dropdown">
+            <!-- Dropdown content -->
+          </div>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table align-items-center">
+          <tbody>
+            {{#each topProducts}}
+            <tr>
+              <td><i class="fa fa-circle text-white mr-2"></i> {{this.productName}}</td>
+              <td>{{this.totalQuantity}}</td>
+              {{!-- <td>+50%</td> --}}
+            </tr>
+           
+            {{/each}}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+        {{!--  --}}
 
         <!--End Dashboard Content-->
 
@@ -488,7 +406,7 @@
     <footer class="footer">
       <div class="container">
         <div class="text-center">
-          Copyright © 2018 Dashtreme Admin
+          Only Shoes Admin
         </div>
       </div>
     </footer>
