--- a/views/user/blog.hbs
+++ b/views/user/blog.hbs
@@ -193,9 +193,9 @@
                             <ul>
                             	<li><a href="/shop">Women</a></li>
                                 <li><a href="/shop">Men</a></li>
-                                <li><a href="/shop">Kids</a></li>
-                                <li><a href="/shop">Sportswear</a></li>
-                                <li><a href="/shop">Sale</a></li>
+                                <li><a href="/shop">Charecter Edition</a></li>
+                                <li><a href="/shop">Sport</a></li>
+                                <li><a href="/shop">Sneakers</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -205,7 +205,7 @@
                                 <li><a href="#">Careers</a></li>
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">Terms &amp; condition</a></li>
-                                <li><a href="#">My Account</a></li>
+                                <li><a href="/userprofile">My Account</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -213,7 +213,7 @@
                             <ul>
                             	<li><a href="#">Request Personal Data</a></li>
                                 <li><a href="#">FAQ's</a></li>
-                                <li><a href="/contact">Contact Us</a></li>
+                                <li><a href="#">Contact Us</a></li>
                                 <li><a href="#">Orders and Returns</a></li>
                                 <li><a href="#">Support Center</a></li>
                             </ul>
