--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -139,7 +139,7 @@
 
         <div id="cartEmptyMessage" class="text-center cart-empty-message">
         <p>Your cart is empty</p>
-        <a href="http://annimexweb.com/" class="btn btn-secondary btn--small cart-continue">Continue shopping</a>
+        <a href="/shop" class="btn btn-secondary btn--small cart-continue">Continue shopping</a>
     </div>
 {{/if}}
                         </div>
@@ -198,11 +198,11 @@
                     	<div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
                         	<h4 class="h4">Quick Shop</h4>
                             <ul>
-                            	<li><a href="#">Women</a></li>
-                                <li><a href="#">Men</a></li>
-                                <li><a href="#">Kids</a></li>
-                                <li><a href="#">Sportswear</a></li>
-                                <li><a href="#">Sale</a></li>
+                            	<li><a href="/shop">Women</a></li>
+                                <li><a href="/shop">Men</a></li>
+                                <li><a href="/shop">Charecter Edition</a></li>
+                                <li><a href="/shop">Sport</a></li>
+                                <li><a href="/shop">Sneakers</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -212,7 +212,7 @@
                                 <li><a href="#">Careers</a></li>
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">Terms &amp; condition</a></li>
-                                <li><a href="#">My Account</a></li>
+                                <li><a href="/userprofile">My Account</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -220,7 +220,7 @@
                             <ul>
                             	<li><a href="#">Request Personal Data</a></li>
                                 <li><a href="#">FAQ's</a></li>
-                                <li><a href="/contact">Contact Us</a></li>
+                                <li><a href="#">Contact Us</a></li>
                                 <li><a href="#">Orders and Returns</a></li>
                                 <li><a href="#">Support Center</a></li>
                             </ul>
@@ -240,7 +240,7 @@
                 <div class="footer-bottom">
                 	<div class="row">
                     	<!--Footer Copyright-->
-	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><span></span> <a href="templateshub.net">Templates Hub</a></div>
+	                	<div class="col-12 col-sm-12 col-md-6 col-lg-6 order-1 order-md-0 order-lg-0 order-sm-1 copyright text-sm-center text-md-left text-lg-left"><span></span> <a href="#">Only Shoes</a></div>
                         <!--End Footer Copyright-->
                         <!--Footer Payment Icon-->
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 order-0 order-md-1 order-lg-1 order-sm-0 payment-icons text-right text-md-center">
@@ -295,8 +295,19 @@
   var checkbox = document.querySelector('input[name="tearm"]');
   if (!checkbox.checked) {
     event.preventDefault();
-    alert("Please agree with the terms and conditions");
-  }
+Swal.fire({
+    icon: 'warning',
+    title: 'Terms and Conditions',
+    text: 'Please agree with the terms and conditions',
+    showConfirmButton: false,
+    timer: 2000,
+    timerProgressBar: true,
+    background: '#f9f9f9',
+    iconColor: '#dc3545',
+    customClass: {
+        popup: 'swal2-custom-popup'
+    }
+});  }
 });
      </script>
 <script>
@@ -326,11 +337,29 @@ $(document).ready(function() {
                     $('#cartTotal').text("₹"+ data.cartTotal);
                     $('#cartTotal-grand').text('₹'+data.cartTotal)
                 } else {
-                    alert(data.message);
-                }
+ Swal.fire({
+        icon: 'error',
+        title: 'Error',
+        text: data.message,
+        background: '#f9f9f9',
+        iconColor: '#dc3545',
+        customClass: {
+            popup: 'swal2-custom-popup'
+        }
+    });                }
             },
             error: function(jqXHR, textStatus, errorThrown) {
-                alert('Error updating quantity');
+                 Swal.fire({
+        icon: 'error',
+        title: 'Error',
+        text: 'Error updating quantity',
+        background: '#f9f9f9',
+        iconColor: '#dc3545',
+        customClass: {
+            popup: 'swal2-custom-popup'
+        }
+    });
+                
             }
         });
     }
