--- a/views/user/forgot-password.hbs
+++ b/views/user/forgot-password.hbs
@@ -103,12 +103,12 @@
                                 <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
                                     <h4 class="h4">Quick Links</h4>
                                     <ul>
-                                        <li><a href="#">Women</a></li>
-                                        <li><a href="#">Men</a></li>
-                                        <li><a href="#">Kids</a></li>
-                                        <li><a href="#">Deals</a></li>
-                                        <li><a href="#">Accessories</a></li>
-                                        <li><a href="#">New In</a></li>
+                                        <li><a href="/shop">Women</a></li>
+                                        <li><a href="/shop">Men</a></li>
+                                        <li><a href="/shop">Sneakers</a></li>
+                                        <li><a href="/shop">Deals</a></li>
+                                        <li><a href="/shop">Trending</a></li>
+                                        <li><a href="/shop">New Arrival</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-3 col-lg-3 footer-links">
@@ -313,7 +313,36 @@
             <script src="assets/js/plugins.js"></script>
             <!-- Main JS -->
             <script src="assets/js/main.js"></script>
+{{#if emailNotFound}}
+<script>
+  Swal.fire({
+    title: 'Error!',
+    text: 'Email not found',
+    icon: 'error',
+    confirmButtonText: 'OK'
+  }).then((result)=>{
+    if(result.isConfirmed){
+        emailNotFound = false
+    }
+  })
+</script>
+{{/if}}
 
+{{#if emailSent}}
+<script>
+  Swal.fire({
+    title: 'Success!',
+    text: 'Verification email has been sent to your mail',
+    icon: 'success',
+    confirmButtonText: 'OK'
+  }).then((result)=>{
+    if(result.isConfirmed){
+        emailSent = false
+    }
+  })
+
+</script>
+{{/if}}
         </div>
     </body>
 </html>
