--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -64,7 +64,7 @@
             <div class="row align-items-center">
             	<!--Desktop Logo-->
                 <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
-                    <a href="/hom">
+                    <a href="/home">
                     	<img src="assets/images/logo.svg" alt="Belle Multipurpose Html Template" title="Belle Multipurpose Html Template" />
                     </a>
                 </div>
